run-transformer: Remove flight recorder